book/tests/snapshots/snapshot__run_display_reference_prql@language-features__target-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/target-2.prql
---
prql version:^0.5



from employees



